--- a/hystrix-dashboard/build.gradle
+++ b/hystrix-dashboard/build.gradle
@@ -1,16 +1,20 @@
 apply plugin: 'war'
-apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
+apply plugin: 'org.springframework.boot'
 
 dependencies {
-    provided 'javax.servlet:servlet-api:2.5'
     compile 'org.apache.httpcomponents:httpclient:4.2.1'
     compile 'log4j:log4j:1.2.17'
     compile 'org.slf4j:slf4j-log4j12:1.7.0'
     compile 'commons-io:commons-io:2.5'
+    compile("org.springframework.boot:spring-boot-starter-web:1.1.10.RELEASE") {
+        exclude module: "org.apache.tomcat.embed"
+        exclude module: "spring-boot-starter-logging"
+        exclude module: "logback-classic"
+    }
+    compile("org.springframework.boot:spring-boot-starter-actuator:1.1.10.RELEASE") {
+        exclude module: "logback-classic"
+    }
     testCompile 'junit:junit:4.12'
 }
 
-gretty {
-	httpPort = 7979
-    servletContainer = 'jetty9'
-}
+
